# MCP-Client

./: .gitignore  README.md  main.py  pyproject.toml
backend/: app.py  config_manager.py  mcp_client.py  pyproject.toml  requirements.txt
backend/config/: mcp_servers.example.json
config/: mcp_servers.example.json
frontend/: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.cjs  tailwind.config.ts
frontend/.github/workflows/: validate.yml
frontend/src/: store.ts
frontend/src/api/: os.ts  routes.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/renderers/: DefaultRenderer.tsx  JSONRenderer.tsx  TableRenderer.tsx  TextRenderer.tsx  index.ts  types.ts
frontend/src/components/settings/: ConnectionCard.tsx  ConnectionDialog.tsx  ConnectionList.tsx  MCPServerCard.tsx  MCPServerDialog.tsx  MCPServerList.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  dialog.tsx  input.tsx  label.tsx  select.tsx  skeleton.tsx  sonner.tsx  textarea.tsx  theme-toggle.tsx
frontend/src/hooks/: useAGUIStreamHandler.tsx  useAIResponseStream.tsx  useAIStreamHandler.tsx  useChatActions.ts  useMigration.tsx  useSessionLoader.tsx
frontend/src/lib/: aguiClient.ts  aguiProtocol.ts  apiHelper.ts  audio.ts  auth.ts  connectionManager.ts  constructEndpointUrl.ts  modelProvider.ts  utils.ts
frontend/src/types/: agui.ts  os.ts
src/: __init__.py  app.py  mcp_client.py
(+51 files in other folders)
